Resolve style issues on mobile `series` pages.

--- a/src/scss/series-detail.scss
+++ b/src/scss/series-detail.scss
@@ -21,7 +21,7 @@
   }
 
   @media(max-width: $mobile-breakpoint) {
-    padding: 30px 5vw;
+    padding: 30px 3vw;
   }
 
   .series-feature-image {
@@ -44,7 +44,7 @@
       margin: 35px 0 5px;
 
       @media(max-width: $mobile-breakpoint) {
-        font-size: 1.4em !important;
+        font-size: 1.3em !important;
 
         &:last-of-type {
           display: none;
@@ -77,6 +77,15 @@
     overflow: hidden;
     transition: $transition;
 
+    @media(max-width: $mobile-breakpoint) {
+      padding: 15px 5px;
+      border-left: unset;
+      border-radius: unset;
+      border-bottom: unset;
+      box-shadow: unset;
+      border-top: 1px solid #e6e6e6;
+      margin-bottom: 0;
+    }
 
     &:hover {
       cursor: pointer;
@@ -107,6 +116,14 @@
       margin-right: 20px;
       display: flex;
       line-height: 1;
+      font-family: $header-font-medium;
+      color: $color-header-grey;
+
+      @media(max-width: $mobile-breakpoint) {
+        font-size: 2em;
+        margin-right: 10px;
+        min-width: 30px;
+      }
     }
 
     .series-post-card-detail {
@@ -118,7 +135,7 @@
         -webkit-box-orient: vertical;
         display: -webkit-box;
         font-family: $header-font-medium;
-        font-size: 1.2em;
+        font-size: 1.3em;
         font-weight: unset;
         line-height: 1.1;
         margin: 0 0 7px;
@@ -128,7 +145,6 @@
 
         @media(max-width: $mobile-breakpoint) {
           -webkit-line-clamp: 2;
-          line-height: 1.2;
         }
       }
 
@@ -138,6 +154,7 @@
         display: -webkit-box;
         font-family: $body-font;
         color: $color-body-font;
+        opacity: .9;
         font-size: .95em;
         line-height: 1.3;
         margin-bottom: 12px;
@@ -147,22 +164,40 @@
         width: stretch;
         opacity: .9;
         transition: $transition;
+
+        @media(max-width: $mobile-breakpoint) {
+          margin-bottom: 10px;
+        }
       }
 
       .reading-time {
         align-items: center;
         color: #6c7888;
         display: flex;
-        font-family: $body-font-bold;
+        font-family: $body-font-medium;
         font-size: .8em;
         line-height: 1;
-        opacity: .8;
+        opacity: 0.9;
         transition: $transition;
+
+        @media(max-width: $mobile-breakpoint) {
+          font-size: 0.75em;
+          display: block;
+        }
 
         i,
         svg {
           margin-right: 5px;
           transition: $transition;
+
+          @media(max-width: $mobile-breakpoint) {
+            margin-right: 3px;
+          }
+        }
+
+        span {
+          font-family: $body-font-medium;
+          font-size: 1.1em;
         }
       }
     }
@@ -205,6 +240,10 @@
     svg,
     i {
       font-size: 1.1em;
+
+      @media(max-width: $mobile-breakpoint) {
+        font-size: 1em;
+      }
     }
   }
 }
